# qt-command-palette

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  launch.py  pyproject.toml  setup.py
qt_command_palette/: __init__.py  _api.py  _commands.py  _list.py  _storage.py  _widget.py
tests/: _file_0.py  _file_1.py  test_register.py  test_storage.py
